新增導航欄路由和修改相關組件

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -36,3 +36,14 @@ body{
 .font-weight-600{
     font-weight: 600;
 }
+
+.section-full-width {
+    width: 100%;
+}
+
+
+.section-width {
+    padding: 5px 0px;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
