--- a/src/css/common.css
+++ b/src/css/common.css
@@ -10,10 +10,11 @@
 
     --body-bg-color: #1e1e1e;
     --hover-color: #707070;
+    --placeholder-color: #a9a9a9;
 
     --breadcrumb-bg-h:300;
-    --breadcrumb-bg-s:100%;
-    --breadcrumb-bg-l:95%;
+    --breadcrumb-bg-s:1%;
+    --breadcrumb-bg-l:100%;
     --breadcrumb-text-color: #707070;
     --breadcrumb-text-color-active: #1e1e1e;
 
@@ -25,10 +26,12 @@
     
 }
 
-body{
-    background-color:  #fff;
+.body{
+    width: 100%;
+    height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     min-width: 500px;
+    background-color: var(--body-bg-color);
 }
 
 .clearfix::after{
@@ -48,7 +51,7 @@ body{
     width: 100%;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.06);
     box-sizing: border-box;
-    z-index: 9999;
+    z-index: 999;
 }
 
 .font-weight-600{
@@ -64,4 +67,9 @@ body{
     padding: 5px 0px;
     margin: 0 auto;
     box-sizing: border-box;
+}
+
+
+.close {
+    display: none;
 }
