修改產品頁面

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -28,6 +28,8 @@
     --cart-item-bg-color: #fff8f4;
     --cart-item-edit-btn-bg-color: #F8F8F8;
 
+    --label-color: #5994c8;
+
     --btn-bg-color: #70bcff;
     --btn-text-color: #F8F8F8;
     
