--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,10 +3,15 @@
 :root{
     --logo-color: #1e1e1e;
 
+    --header-box-shadow-color: #707070;
+
     --header-bg-h: 200;
     --header-bg-s: 100%;
     --header-bg-l: 60%;
     --header-text-color: #1e1e1e;
+
+    --user-header-text-color: #F8F8F8;
+    --user-header-border-color: #707070;
 
     --body-bg-color: #F8F8F8;
     --hover-color: #707070;
